[gd_scene load_steps=4 format=3 uid="uid://rxgj17aggcqc"]

[ext_resource type="FontFile" uid="uid://dg7tlal1r4m0a" path="res://assets/fonts/GhastlyPixe.ttf" id="1_tjut7"]
[ext_resource type="Script" uid="uid://bnr12hhwps1dr" path="res://scripts/ui/item_select.gd" id="2_h3hmi"]

[sub_resource type="Theme" id="Theme_h3hmi"]
default_font = ExtResource("1_tjut7")
default_font_size = 16

[node name="ItemSelect" type="PanelContainer"]
offset_right = 8.0
offset_bottom = 8.0
theme = SubResource("Theme_h3hmi")
script = ExtResource("2_h3hmi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use Item"

[node name="EquipButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equip Item"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
